# gogtg

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/: spec.md
scripts/: README.md  setup.sh  start.sh  update.sh
src/gtg/: models.py  notifier.py  overview.py  scheduler.py  scheduling.py  server.py  storage.py
tests/: test_notifier.py  test_overview.py  test_scheduler.py  test_scheduling.py  test_server.py  test_storage.py
